# Prepare-Production

./: .gitignore  README.md
cluster/swarm/: backend.yml  cadvisor.yml  monitoring.yml  node-exporter.yml  traefik.yml
cluster/swarm/backend/: backend.yml  backend_stack.yml
cluster/swarm/monitoring/: cadvisor.yml  grafana.yml  node-exporter.yml  portainer.yml  prometheus.yml
cluster/swarm/prometheus/: prometheus.yml
cluster/swarm/traefik/: traefik.yml
pod/: Dockerfile  main.py  pyproject.toml
pod/app/: .env  my_config.py  my_database.py  my_redis.py
service/: docker-compose.yml
